# stackvm

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.yaml  main.cc  main.cpp  runtime.cpp
bfvm_out/: ir.txt  ir_unopt.txt  llvm_ir_opt.txt  llvm_ir_unopt.txt
dbg_out/: llvm_ir_opt.txt  llvm_ir_unopt.txt  timeline.txt
doc/: hbf.md
dump/: bf.txt  ir.txt  ir_unopt.txt  llvm_ir_opt.ll  llvm_ir_unopt.ll  timeline.txt
samples/: a.b  alias_test.b  cell_size.b  harmonic.b  hello.b  mandlebrot.b  self_interpreter.b  sierpinski.b  signedmath.b  synthetic_alias.b
src/: aot.h  backend.h  backend_llvm.cc  backend_llvm.h  bf.cc  bf.cpp  bf.h  bf2ir.cc  bf2ir.h  bfvm.cc  bfvm.cpp  bfvm.h  common.h  constants.h  diagnostics.cc  diagnostics.cpp  diagnostics.h  ir.cc  ir.h  ir_print.cc  ir_print.h  jit.cc  jit.h  lowering.cc  lowering.cpp  lowering.h  math_util.h  memory.cc  memory.cpp  memory.h  opt.h  opt_cse.cc  opt_fold.cc  opt_fold.h  opt_loop.cc  opt_resolve_regs.cc  opt_resolve_type.cc  opt_validate.cc  tape_memory.cc  tape_memory.h
src/opt/: fold.cc  fold.cpp  fold.h  resolve_regs.cc  resolve_regs.cpp  resolve_type.cc  type_resolution.cc  validate.cc  validate.cpp
test/: cell_size.b  hello.b  semihash.b
tool/: .gitignore  pubspec.yaml
tool/lib/: tool.dart
tool/test/: stackvm_test.dart
